--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,7 +12,7 @@ are at the top. Dates written extra large are release dates. This contains only 
 ----
 
 *2011 July 20*
-  * *WOO HOO!* As proof that the internet works: as of r1920 (Central European Time) Coen Campman and i got [V8Convert] (or a branch of it, anyway) building on MSVC. This will require a few minor incompatible changes, but nothing too painful. Here's a snippet from our chat session:
+  * *WOO HOO!* As proof that the internet works: as of r1920 (Central European Time) Coen Campman and i got [V8Convert] (or a branch of it, anyway) building on MSVC (over Google Chat, i might add). This requires a few minor incompatible changes, but nothing too painful. Here's a snippet from our chat session (ever so slightly edited for readability):
 
 {{{
 ...
@@ -43,37 +43,24 @@ it doesn't crash xD
 
 ... after much fiddling with msvc ...
 
-Sent at 8:37 PM on Wednesday
- Coen:  
-var test = new MyType();
-print(test);
-that works 
-
-...
-
  Coen:  
 var test = new MyType();
 print(test);
 test.constMethod();
 test.nonConstMethod();
 print(test.nonMember(42));
- me:  btw: you can create a new print() function with: FunctionToInCa<int (char const *), ::puts>::Call
- Coen:  d:\path\to\cvv8\demo2.cpp:20:MyType::MyType(): MyType::MyType() @ 00A
-18358
+ Coen:  d:\path\to\cvv8\demo2.cpp:20:MyType::MyType(): MyType::MyType() @ 00A18358
 [object Object]
 d:\path\to\cvv8\demo2.cpp:35:MyType::aConstMethod():
 d:\path\to\cvv8\demo2.cpp:34:MyType::aNonConstMethod():
 d:\path\to\cvv8\demo2.cpp:40:a_non_member():  arg=(42)
 42
 ^_^
- me:  but puts() probably doesn't like NULL pts.
-GREAT 
+ me:  GREAT 
 Coen:  yeahh 
  me:  thanks a LOT for helping getting this working
  Coen:  np
- me:  i'll add you to the contributor list immediately. should i hyperlink to a specific site?
  Coen:  didn't require that much changes actually which is awesome ;D
-nah, don't have a personal website ^^
  me:  i still need to clean up some of the code, and some of the docs are no longer valid, but the hard part is behind us.
 and it was actually pretty easy 
  Coen:  not sure it works on 2008 for example though  but i think the compiler didn't change that much
@@ -85,7 +72,9 @@ me:  doh... and i need to go fix all the plugins...
 but i'll probably go blind from all the compiler errors ;)
 }}}
 
-(it's a shame that the emoticons don't copy/paste. (some were added back in for clarity.)
+(It's a shame that the emoticons don't copy/paste. (some were added back in for clarity.))
+
+_Many_ thanks to Coen for committing his time and resources to this.
 
 *2011 July 19*
   * Reached r1900, up 400 commits from exactly one calendar month ago. All of that was in the [V8Convert] tree.
