Edited wiki page V8Convert through web user interface.

--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -112,273 +112,7 @@ These work identically to the v8-juice APIs with the same names (see [Converting
 
 =Converting Functions to `v8::InvocationCallback`=
 
-Quite possibly the simplest way in the world to convert free functions and member functions to `v8::InvocationCallback` functions is using the `XXXToInCa<>` templates ("!InCa" is short for "!InvocationCallback"):
-
-{{{
-v8::InvocationCallback cb;
-
-// A non-const method: int MyType::nonConstMethod(char const *)
-cb = cv::MethodToInCa<MyType, int (char const *), &MyType::nonConstMethod>::Call;
-
-// A const method: int MyType::constMethod(char const *) const
-cb = cv::ConstMethodToInCa<MyType, int (char const *), &MyType::constMethod>::Call;
-
-// A free function: int puts(char const *)
-cb = cv::FunctionToInCa< int (char const *), ::puts >::Call;
-}}}
-
-Because these templates _create_ `v8::InvocationCallback` functions at compile-time, they require no dynamically-allocated proxy objects or other hidden memory usage like some binding mechanisms require. The only overhead these templates add is the conversion of arguments/return values to/from JS. The library does as much work as possible at compile time to help detect type-conversion errors early and help avoid extra runtime costs.
-
-The core function-binding features are encapsulated in three templates:
-
-  * `FunctionToInCa<>`
-  * `MethodToInCa<>`
-  * `ConstMethodToInCa<>`
-
-By using only those templates clients can bind a wide variety of native functions to arbitrary JS objects (where language calling conventions and cross-language type conversions allow).
-
-Support for const- and non-const methods are split into two implementations to help support MSVC compilers (but as of 20110720 we may have a way to consolidate them into once class even for MSVC).
-
-Note that binding to non-static member methods requires (at runtime), that `CastFromJS<T>()` can convert the current JS 'this' object to its native counterpart. See [V8Convert_ClassCreator] for an example of one way to set this up (there are many ways).
-
-==Argument Type Information==
-
-When using `FunctionToInCa` and friends we can use template techniques to get type information about the arguments if we want to use that for conversion purposes:
-
-{{{
-using namespace cvv8;
-typedef FunctionToInCa<int (char const *,double), my_function> MyFunc;
-
-typedef char AssertArityIs2[(2 == cv::sl::Arity<MyFunc>::Value) ? 1 : -1];
-typedef sl::At< 0, MyFunc >::Type A0; // == (char const *)
-typedef sl::At< 1, MyFunc >::Type A1; // == double
-typedef sl::At< 2, MyFunc >::Type A2; // compile-time error (arg out of bounds)
-
-// Note that "InCa-like" functions have an Arity value of -1:
-typedef char AssertArityIsNegative[
-   (sl::Arity< Signature< void (v8::Arguments const &) > >::Value == -1)
-   ? 1
-   : -1];
-}}}
-
-We can use further templating techniques to do things like choose different code paths based on that type information, as in this rather contrived example which changes `int64_t` to `double` (v8 does not internally support 64-bit integers):
-
-{{{
-namespace tmp = cv::tmp;
-typedef tmp::IfElse< tmp::SameType<int64_t,SomeNumericType>::Value,
-                     double,
-                     SomeNumericType
-                   >::Type NumericType;
-}}}
-
-Template gurus will certainly come up with new and original ways to use and abuse this feature.
-
-== Examples ==
-
-Some examples of binding functions and methods:
-
-{{{
-#include <cstdio> // puts()
-...
-namespace cv = cvv8;
-
-v8::InvocationCallback cb; // v8's generic callback function interface
-
-// Here's how we can "convert" various native functions to
-// v8::InvocationCallback functions:
-
-// Function: int puts(char const *)
-cb = cv::FunctionToInCa<
-       int (char const *), ::puts
-     >::Call;
-
-// Class method: double MyType::multiply(double, double)
-cb = cv::MethodToInCa<
-       MyType,
-       double (double,double),
-       &MyType::multiply
-     >::Call;
-
-// Const class method:
-//    char const * MyType::errorCodeToString(int) const
-cb = cv::ConstMethodToInCa<
-       MyType,
-       char const * (int),
-       &MyType::errorCodeToString
-     >::Call;
-
-// Here's how we can bind a JS-side garbage-collection-triggering
-// function:
-cb = cv::FunctionToInCa<bool (),v8::V8::IdleNotification>::Call;
-}}}
-
-Those examples demonstrate all of the public API one needs for converting functions to `v8::InvocationCallback` equivalents! There are some additional templates which add features on top of those, such as dispatching overloaded functions, but those are all one really needs for most basic function bindings.
-
-It might be interesting to note that the above functions are _created_, but _not actually called_, by the above code (note that we pass no non-template parameters to them). All of the real work is done at compile-time.
-
-== Caveats and Unsupported Functions ==
-
-Some examples of function signatures which _cannot_ (or must not) be converted using this framework:
-
-  * `int func( someType ** )`: pointer-to-pointer cannot be translated generically to JS
-  * `int func( void * )`: Giving access to `void *` in JS makes it really easy to crash your apps from script code.
-  * `int func(...)`: elipsis lists, `va_list`, and C++0x var-args are not directly supported.
-  * !JavaScript has no inherent support for binary data, and v8's string class does not support it. Thus this API must not be used with functions returning binary data (e.g. via `char [const]*`).
-
-Supported, but _possibly_ ill-advised:
-
-  * `T * func(...anything...)`: Because...
-
-If the function returns dynamically-allocated memory, or transfers ownership of the returned memory to the caller, it _will_ cause a leak unless that memory has been somehow given over to v8 from within that function. That said... types for which `NativeToJS<T>` is feasible (this depends on several factors), we can in fact make this conversion legal for many client-defined types. The demo code in the source tree shows an example of how to do this.
-
-== The (`char [const] *`) Problem ==
-
-Because of issues regarding the ownership and lifetimes of raw C-style string, functions taking `(char const *)` have a few relatively minor limitations:
-
-  * The C-strings _must_ be `NULL` or nul-terminated. It cannot be used with binary data because they are converted to JS strings.
-  * Non-const (`char *`) is not supported. We could partially implement it using a proxy, but the changes would get lost on their way back to JS space because the JS calling conventions do not allow us to pass changes to strings back this way.
-  * The bound function _must not_ hold the pointer it is passed after it returns. It must either consume or ignore the input, and keep no copy of the pointer itself.
-  * The internal conversion process uses `v8::String::Utf8Value`, and "should" be safe for use with functions accepting ASCII or UTF8 input. Behaviour with any other encodings is undefined.
-  * If passed a JS `null` or `undefined`, it converts to a literal `NULL`, otherwise it will convert to a string (though possibly empty). This is significant for functions which treat `NULL` different than an empty string (like `strlen()`, which may crash your app if passed `NULL`).
-
-When native functions return (`char const *`), they are converted to v8 Strings, and therefore have the same encoding limitations as for C-string function arguments. A return value of `NULL` is converted to a JS `null`, as opposed to an empty string.
-
-This support allows us to convert functions like the following to `v8::InvocableCallback`s:
-
-{{{
-char const * cstring_test( char const * c )
-{
-    std::cerr << "cstring_test( @"<<(void const *)c
-              <<") ["<<(c ? c : "<NULL>")<<"]\n";
-    return c;
-}
-
-v8::InvocationCallback cb =
-   cv::FunctionToInCa<
-     char const * (char const *),
-     cstring_test
-    >::Call;
-}}}
-
-If we bind that to JS with the name `cstr`:
-
-{{{
-var jstr = "Hi, world!";
-jstr = cstr(jstr); print(jstr);
-jstr = cstr(undefined); print(jstr);
-jstr = cstr(null); print(jstr);
-jstr = cstr("Bye, world!"); print(jstr);
-}}}
-
-The output looks something like:
-
-{{{
-cstring_test( @0x984acbc) [Hi, world!]
-Hi, world!
-cstring_test( @0) [<NULL>]
-null
-cstring_test( @0) [<NULL>]
-null
-cstring_test( @0x984acbc) [Bye, world!]
-Bye, world!
-}}}
-
-(The fact that the pointer addresses are the same in the first and last calls is a mere fluke of memory re-allocation, and must not be understood to mean that the address is somehow stable across calls.)
-
-==Special Case: `v8::InvocationCallback`-like Functions==
-
-The library provides special support for binding functions which "look like" a `v8::InvocationCallback`. The definition of "looks like" is: the function takes only a single `(v8::Arguments const &)` argument and returns any type.
-
-Such functions are treated like `v8::InvocationCallback` instances, in that they can accept any number of arguments of any type. The return value is converted to a `v8::Handle<v8::Value>` (or to JS `undefined` for `void` returns).
-
-Examples of what we consider to be `v8::InvocationCallback`-like:
-
-{{{
-int my_callback( v8::Arguments const & );
-void MyType::callback( v8::Arguments const & );
-double MyType::constCallback( v8::Arguments const & ) const;
-v8::Handle<v8::Value> RealInvocationCallback( v8::Arguments const & );
-}}}
-
-And we can create `v8::InvocationCallback` functions from them like:
-
-{{{
-InvocationCallback cb;
-
-// Non-member function:
-cb = FunctionToInCa< int (Arguments const &),
-                     my_callback >::Call;
-// Equivalent to:
-cb = InCaLikeFunction<int, my_callback>::Call;
-
-
-// Non-const member method:
-cb = MethodToInCa< MyType,
-                   void (Arguments const &),
-                   &MyType::callback >::Call;
-// Equivalent to:
-cb = InCaLikeMethod<MyType, void, &MyType::callback>::Call;
-
-
-// Const member method:
-cb = ConstMethodToInCa< MyType,
-                        double (Arguments const &),
-                        &MyType::constCallback >::Call;
-// Equivalent to:
-cb = InCaLikeConstMethod<MyType, double, &MyType::constCallback>::Call;
-
-
-// The simplest case is:
-cb = InCaToInCa< RealInvocationCallback >::Call;
-// We can of course simply use:
-cb = RealInvocationCallback;
-// But the former approach is useful when we need to pass an InCa type
-// as a template parameter and we only have an InvocationCallback.
-// We can also use FunctionToInCa and friends to bind InCa-like functions,
-// but InCaToInCa is a simpler way to do it for this special case.
-}}}
-
-(Pretty simple, huh?)
-
-!InCa-like non-member functions bound have a particularly interesting property: if such a function is bound as a member of a `T` native object, we can access the native `this` pointer from inside that function like this:
-
-{{{
-int my_callback( v8::Arguments const & argv )
-{
-   T * self = cv::CastFromJS<T>(argv.This());
-   if( !self ) {
-       // no native T found. This might or might not
-       // be an error, depending on app-specific conditions.
-   }
-   ...
-}
-}}}
-
-==Special Case: Overloading==
-
-See [V8Convert_Overloading].
-
-==Special Case: Non-Convertible Return Types==
-
-See [V8Convert_TipsAndTricks].
-
-==Special Case: Unlocking the v8 Engine==
-
-See [V8Convert_TipsAndTricks].
-
-==Special Case: Catching native Exceptions==
-
-See the examples in [V8Convert_TipsAndTricks].
-
-==Forwarding v8-supplied Function Arguments to non-bound Functions==
-
-  * `forwardFunction()`
-  * `forwardMethod()`
-  * `forwardConstMethod()`
-
-Those functions allow the client to pass on `v8::Arguments` to non-bound functions "manually".
-
-*Achtung:* Because these functions use `FunctionToInCa` (and friends), they inherit the "v8 unlocking" behaviour from that class. That is described in much more detail in another section of this page, but in short: if the arguments list or return value of the function does not have any v8 types (`v8::Handle`, `v8::Arguments`, etc.) then then the v8 engine is _unlocked_ for the duration of the native call. _If_ the function, despite having no v8-specific arguments/return type, internally uses v8 (or calls another function which does), then it _must_ also use a `v8::Locker` _or_ clients must use `FunctionToInCa` (or compatible) instead of these functions and explicitly disable locking (see the documentation and examples on the [V8Convert_TipsAndTricks] page). If one of these two conditions are _not_ met, v8 will trigger an assertion at runtime (when the function is called from JS), killing the application (and frustrating the user). Debug builds of libv8 will dump an explanation of the error to `stderr`, but non-debug builds will silently crash.
+This is covered in detail in [V8Convert_FunctionBinding] and  [V8Convert_Overloading].
 
 =But wait, there's more!=
 
@@ -391,76 +125,15 @@ The code includes the following additional utilities:
 
 ==Easily Binding C++ Classes==
 
-See [V8Convert_ClassCreator].
+See [V8Convert_ClassCreator] for one approach to binding C++ classes to JS. Many developers already have their own favoured approach, and those approaches can be used with this framework as long as `CastFromJS<T>()` and (only in some cases) `CastToJS<T>()` can be made to work. As a rule `CastFromJS()` support is easy to do, and fairly generic solutions exist for the problem. `CastToJS()`, on the other hand, requires type-specific knowledge which is not genericizable without requiring that all bound classes subclass a specific base type/interface (or having similar restrictions). The `cvv8` demo code shows a couple different ways of adding plumbing (a.k.a. overhead) which allows the JS-to-native conversion to work for a given type.
 
 == Binding Native Variables/Properties to JS ==
 
-Some examples of binding native properties to JS:
-
-{{{
-// namespace- or global scope:
-std::string sharedString;
-std::string getSharedString()
-    { return sharedString; }
-void setSharedString(std::string const & s) 
-    { sharedString = s; }
-
-...
-
-// Convenience typedef:
-typedef cvv8::PropertyBinder PB;
-
-
-// Assume: 'proto' is our ObjectTemplate prototype.
-
-// Bind non-member variable directly to a JS property:
-PB::BindSharedVar<std::string, &sharedString>
-                 ("sharedString", proto );
-
-// BindSharedVarRO() binds it read-only.
-
-// Or bind it read-only via a getter function:
-PB::BindGetterFunction<std::string (),
-                      getSharedString>
-                      ("sharedString", proto);
-
-// Or bind it via getter/setter functions:
-PB::BindGetterSetterFunctions<std::string (),
-                              getSharedString,
-                              void (std::string const &),
-                              setSharedString>
-                              ("sharedString", proto);
-}}}
-
-(Pedantic note: v8 apparently does not allow us to bind a setter without also binding a getter. My attempts to do so caused crashes.)
-
-JS properties can be bound to native _member_ properties similarly using the `MemberPropertyBinder` subclass of `PropertyBinder`. Note that for member binding to work, the JS class being bound must "wrap" that native class. i.e. that only works with "fully wrapped" classes (e.g. see [V8Convert_ClassCreator]).
-
-The property-binding API has a much richer feature set than is demonstrated here, by the way.
+See [V8Convert_PropertyBinding].
 
 ==Passing v8 Arguments directly to Constructors==
 
-The `CtorForwarder` class assists in forwarding `v8::Arguments` objects to constructors. Usage examples:
-
-{{{
-// Typedefs for 3 different ctors:
-typedef cv::CtorForwarder<MyType * ()> Ctor0;
-typedef cv::CtorForwarder<MyType * (int)> Ctor1;
-typedef cv::CtorForwarder<MyType * (argType1,argType2)> Ctor2;
-
-// We can call these individually:
-MyType * my = Ctor0::Call( argsObject );
-
-// Or we can group them together and dispatch based on the number of arguments pass in:
-typedef cv::CtorArityDispatcher<
-        cv::Signature<MyType * (Ctor0, Ctor1, Ctor2)>
-    > Dispatch;
-MyType * my = Dispatch::Call( argsObject );
-}}}
-
-Unlike with most other bindings, the argument types do not need to match _exactly_. The types declared in the `CtorForwarder` instantiation will be used for purposes of converting the arguments from JS to native values. As long as those types can be implicitly converted to the types accepted by the constructor(s) then it should work okay. e.g. you can declare the forwarder as having an `int` argument even though the ctor really takes a `double`. (However, that would cause any doubles passed in from JS space to first be converted to an integer, which would lose precision.)
-
-An additional property of this particular binding is that we can bind to constructors which have default values for some arguments. e.g. if a constructor has 2 required arguments and 2 more optional ones, we can bind it as a 2, 3, and/or 4-arg constructor.
+See [V8Convert_Overloading] (though one need not overload in order to use this feature).
 
 =Brief Overview of `cvv8` Architecture=
 
